

add_library(TarjanAndZewicksOptimalArray STATIC ../TarjanAndZewicksOptimalArray/TarjanAndZewicksOptimalArray.cpp ../TarjanAndZewicksOptimalArray/TarjanAndZewicksOptimalArray.h ../TarjanAndZewicksOptimalArray/Constants.h)
target_include_directories(TarjanAndZewicksOptimalArray INTERFACE ../TarjanAndZewicksOptimalArray/TarjanAndZewicksOptimalArray.h)